[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "srt_tool"

[project]
name = "srt-tool"
authors = [{name = "Richard Darst"}]
readme = "README.md"
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "whisper-ctranslate2",
    "srt",
]

#[project.optional-dependencies]
#test = [
#    "pytest",
#]

[project.scripts]
    srt-tool = "srt_tool:main"

[project.urls]
Repository = "https://github.com/rkdarst/srt-tool/"
#Documentation = "https://example.com/"


# https://flit.pypa.io/en/latest/upload.html
# flit build
# flit publish --repository testpypi
# flit publish
